force-app/main/default/objects/TrainingAssignmentCredential__c/fields/External_Contact_Credential__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Credential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Contact Credential</label>
    <referenceTo>POE_External_Contact_Credential__c</referenceTo>
    <relationshipLabel>Training Assignment Credentials</relationshipLabel>
    <relationshipName>Training_Assignment_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>