force-app/main/default/objects/TrainingAssignmentCredential__c/fields/Training_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Training_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Assignment</label>
    <referenceTo>Training_Assignment__c</referenceTo>
    <relationshipLabel>Training Assignment Credentials</relationshipLabel>
    <relationshipName>Training_Assignment_Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>