force-app/main/default/objects/TrainingAssignmentCredential__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>